test: #25 RoomService 테스트 코드 개선 및 findAll 호출 수정